Fix “tight list” spacing

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,8 +1,19 @@
-dd, dt, h1, h2, h3, h4, h5, h6, p, td, th {
+dd,
+dt,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+li:where(:not(:has(p, section))), /* “Tight” lists. */
+p,
+td,
+th {
 	margin-block-start:  1cap; /* Temp spacing. */
 	margin-inline-end:   calc(-1 * var(--right));
 	margin-inline-start: calc(-1 * var(--left));
-	max-inline-size:     60ch;
+	max-inline-size:     60ch; /* Temp spacing. */
 	text-box-edge:       cap alphabetic; /* 🥹 */
 	text-box-trim:       trim-both;      /* 😭 */
 
